--- a/canvas_modules/common-canvas/assets/styles/common-properties.css
+++ b/canvas_modules/common-canvas/assets/styles/common-properties.css
@@ -376,6 +376,11 @@ input.number,
   overflow: visible;
 }
 
+#field-picker-back-button > svg:not(:root) {
+	margin-right: 5px;
+	transform: translateY(4px);
+}
+
 .reactable-th-checkbox {
   padding-left: 15px;
 }
